--- a/index.css
+++ b/index.css
@@ -1,7 +1,7 @@
 body{
-    margin: 0;
     background-color: black;
     display: flex;
+    margin: 0px;
 }
 .container1 {
     position:absolute;
@@ -14,7 +14,7 @@ body{
 .container2 {
     position:absolute;
     margin-left: 542px;
-    margin-top: -285px;
+    margin-top: -391px;
     padding: 64px;
     width: 350px;
     height: 350px;
@@ -46,10 +46,55 @@ button {
    border-radius: 6px;
 }
 
-.container3 {
-    width: 1500px;
-    height: 0px;
+#rectangle{
+   background-color: lightslategray;
+    width: 150px;
+    height: 40px;
+    margin-top: 35px;
+    border-radius: 5px;
+    color: white;
+    font-size:large;
+    text-align: center;
+}
+#rectangle2{
+    background-color: lightslategray;
+    width: 150px;
+    height: 40px;
+    margin-top: -55px;
+    margin-left: 200px;
+    border-radius: 5px;
+    color: white;
+    font-size:large;
+    text-align: center;
+}
+#rectangle3{
+    background-color: lightslategray;
+    width: 150px;
+    height: 40px;
+    margin-top: 35px;
+    border-radius: 5px;
+}
+#rectangle4{
+    background-color: lightslategray;
+    width: 150px;
+    height: 40px;
+    margin-top: -39.5px;
+    margin-left: 200px;
+    border-radius: 5px;
+}
+.line{
+    width: 400px;
+    height: 0;
+    background-color: black;
+    margin-left: -20px;
+    margin-top: 30px;
     color: black;
-    margin: 360px;
-    padding: 55px;
+}
+.line2{
+    width: 400px;
+    height: 0;
+    background-color: black;
+    margin-left: -20px;
+    margin-top: 30px;
+    color: black;
 }
